add auto compiler support IDE: -setting-Compiler-Build Project Automatically; -Ctrl+Shift+Alt+/, compiler.automake.allow.when.app.runnning

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <relativePath/>
     </parent>
     <dependencies>
-        <!-- SpringBoot Web容器 -->
+        <!-- 选择的Web模块依赖启动器 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -28,6 +28,27 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- 引入热部署依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
+
+    <build>
+        <plugins>
+            <!-- Maven打包工具插件 -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
