use application.properties to set object's property. run Chapter02ApplicationTests.java to see result. @Component    // 用于将Person类作为Bean注入到Spring容器中 @ConfigurationProperties(prefix = "person") // 将配置文件中以person开头的属性注入到该类中 @Autowired //将Person作为Bean注入Spring容器，然后的contextLoads()方法中输出Person

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
         <relativePath/>
     </parent>
     <dependencies>
+        <!-- Spring Boot提供的配置处理器依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <!-- 选择的Web模块依赖启动器 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
