# 随机值设置以及参数间引用配置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@
 
 # 指定要激活的profile多环境配置文件
 spring.profiles.active=dev
+
+# 随机值设置以及参数间引用配置
+tom.age=${random.int[10,20]}
+tom.description=tom的年龄可能是${tom.age}
