--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+# MySQL\u6570\u636E\u5E93\u8FDE\u63A5\u914D\u7F6E
+spring.datasource.url=jdbc:mysql://localhost:3306/springbootdata?serverTimezone=UTC&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=MyMac#123
+
 #person.id=1
 #person.name=tom
 #person.hobby=play,read,sleep
@@ -7,9 +12,9 @@
 #person.pet.type=dog
 #person.pet.name=kity
 
-# 指定要激活的profile多环境配置文件
+# \u6307\u5B9A\u8981\u6FC0\u6D3B\u7684profile\u591A\u73AF\u5883\u914D\u7F6E\u6587\u4EF6
 spring.profiles.active=dev
 
-# 随机值设置以及参数间引用配置
+# \u968F\u673A\u503C\u8BBE\u7F6E\u4EE5\u53CA\u53C2\u6570\u95F4\u5F15\u7528\u914D\u7F6E
 tom.age=${random.int[10,20]}
-tom.description=tom的年龄可能是${tom.age}
+tom.description=tom\u7684\u5E74\u9F84\u53EF\u80FD\u662F${tom.age}
