--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- 阿里巴巴的Druid数据源依赖启动器 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.10</version>
+        </dependency>
+
         <!-- MyBatis依赖启动器 -->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
