--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,11 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/springbootdata?serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=MyMac#123
+#\u6DFB\u52A0\u5E76\u914D\u7F6E\u7B2C\u4E09\u65B9\u6570\u636E\u6E90druid
+spring.datasource.type = com.alibaba.druid.pool.DruidDataSource
+spring.datasource.initialSize=20
+spring.datasource.minIdle=10
+spring.datasource.maxActive=100
 
 #person.id=1
 #person.name=tom
