--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.datasource.initialSize=20
 spring.datasource.minIdle=10
 spring.datasource.maxActive=100
 
+#\u5F00\u542F\u6570\u636E\u5E93\u8868\u5B57\u6BB5\u540D\u7684\u9A7C\u5CF0\u547D\u540D\u5339\u914D\u6620\u5C04\uFF0CaId \u6620\u5C04\u6570\u636E\u5E93\u5B57\u6BB5 a_id
+mybatis.configuration.map-underscore-to-camel-case=true
+
 #person.id=1
 #person.name=tom
 #person.hobby=play,read,sleep
