--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,11 @@ spring.datasource.maxActive=100
 #\u5F00\u542F\u6570\u636E\u5E93\u8868\u5B57\u6BB5\u540D\u7684\u9A7C\u5CF0\u547D\u540D\u5339\u914D\u6620\u5C04\uFF0CaId \u6620\u5C04\u6570\u636E\u5E93\u5B57\u6BB5 a_id
 mybatis.configuration.map-underscore-to-camel-case=true
 
+#\u914D\u7F6EMyBatis\u7684xml\u914D\u7F6E\u6587\u4EF6\u8DEF\u5F84
+mybatis.mapper-locations=classpath:mapper/*.xml
+#\u914D\u7F6EXML\u6620\u5C04\u6587\u4EF6\u4E2D\u6307\u5B9A\u7684\u5B9E\u4F53\u7C7B\u522B\u540D\u8DEF\u5F84
+mybatis.type-aliases-package=com.itheima.domain
+
 #person.id=1
 #person.name=tom
 #person.hobby=play,read,sleep
