--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Spring Data JPA依赖启动器 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
         <!-- 阿里巴巴的Druid数据源依赖启动器 -->
         <dependency>
             <groupId>com.alibaba</groupId>
