连接Redis数据源 @RedisHash("persons")  // 指定操作实体类对象在Redis数据库中的存储空间

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Spring Data Redis依赖启动器 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
         <!-- Spring Data JPA依赖启动器 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
