--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,10 @@ spring.profiles.active=dev
 # \u968F\u673A\u503C\u8BBE\u7F6E\u4EE5\u53CA\u53C2\u6570\u95F4\u5F15\u7528\u914D\u7F6E
 tom.age=${random.int[10,20]}
 tom.description=tom\u7684\u5E74\u9F84\u53EF\u80FD\u662F${tom.age}
+
+# Redis\u670D\u52A1\u5668\u5730\u5740
+spring.redis.host=127.0.0.1
+# Redis\u670D\u52A1\u5668\u8FDE\u63A5\u7AEF\u53E3
+spring.redis.port=6379
+# Redis\u670D\u52A1\u5668\u8FDE\u63A5\u5BC6\u7801\uFF08\u9ED8\u8BA4\u4E3A\u7A7A\uFF09
+spring.redis.password=
