引入thymeleaf模板引擎 1.添加依赖启动器(pom.xml)，进行属性配置(application.properties) 2.templates/中添加页面，使用thymeleaf语法，引入静态文件； 3.css/js/img 等资源放入对应文件夹：static/login，方便管理； 4.国际化配置(application.properties), i18n/中添加国际化文件，自定义区域解析类public class MyLocalResovel implements LocaleResolver {...}

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
     </parent>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
         <!-- Spring Boot提供的配置处理器依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
