--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,14 @@
     </parent>
 
     <dependencies>
+        <!-- 进行文件下载的工具依赖 -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+
+        <!-- 模板引擎thymeleaf -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
