打包war, 不使用spring内嵌tomcat 1. 声明war打包方式 2.声明使用外部tomcat 3.程序主类继承SpringBootServletInitializer，并重写configure()方法， 利用Spring框架的Servlet3.0支持，允许应用程序在Servlet容器启动时进行配置。         return builder.sources(ManualChapter01Application.class);//source方法第一个参数必须是主程序启动类
maven package
./target目录生成 *.war

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,17 @@
         <relativePath/>
     </parent>
 
+    <!-- 1、将项目打包方式声明为war  -->
+    <packaging>war</packaging>
+
     <dependencies>
+        <!-- 2、声明使用外部提供的Tomcat  -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- 进行文件下载的工具依赖 -->
         <dependency>
             <groupId>commons-io</groupId>
