--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.servlet.multipart.max-request-size=50MB
 spring.datasource.url=jdbc:mysql://localhost:3306/springbootdata?serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=MyMac#123
+# \u663E\u793A\u4F7F\u7528JPA\u8FDB\u884C\u6570\u636E\u5E93\u67E5\u8BE2\u7684SQL\u8BED\u53E5
+spring.jpa.show-sql=true
 #\u6DFB\u52A0\u5E76\u914D\u7F6E\u7B2C\u4E09\u65B9\u6570\u636E\u6E90druid
 spring.datasource.type = com.alibaba.druid.pool.DruidDataSource
 spring.datasource.initialSize=20
