启用spring-security http://localhost:8081/ 跳转 http://localhost:8081/login 输入：shitou/123456 登录成功，进入首页

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
     <packaging>war</packaging>
 
     <dependencies>
+        <!-- Spring Security提供的安全管理依赖启动器 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
         <!-- 2、声明使用外部提供的Tomcat  -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
