前端页面访问控制 http://localhost:8081/ 未登录只显示header部分； 登录后根据角色显示内容： <div sec:authorize="hasRole('common')"> <div sec:authorize="hasAuthority('ROLE_vip')">

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
     <packaging>war</packaging>
 
     <dependencies>
+        <!-- Security与Thymeleaf整合实现前端页面安全访问控制 -->
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+        </dependency>
+
         <!-- Spring Security提供的安全管理依赖启动器 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
