--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+# \u914D\u7F6ERabbitMQ\u6D88\u606F\u4E2D\u95F4\u4EF6\u8FDE\u63A5\u914D\u7F6E
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
 # thymeleaf\u9875\u9762\u7F13\u5B58\u8BBE\u7F6E\uFF08\u9ED8\u8BA4\u4E3Atrue\uFF09\uFF0C\u5F00\u53D1\u4E2D\u65B9\u4FBF\u8C03\u8BD5\u5E94\u8BBE\u7F6E\u4E3Afalse\uFF0C\u4E0A\u7EBF\u7A33\u5B9A\u540E\u5E94\u4FDD\u6301\u9ED8\u8BA4true
 spring.thymeleaf.cache=false
 
